[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
fltk = {version = "1.3.20", features = ["fltk-bundled"]}
fltk-theme = "0.6.0"
fltk-evented ="0.2.0"
walkdir = "2"
fs_extra = "1.2.0"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
ansi_term = "0.12"
piechart = "1.0.0"
random_color = "0.6.1"
event-listener ="2.5.3"
lazy_static="1.4.0"
fltk-table="0.2.1"
rand="0.8.5"